# herald

./: .gitignore  Cargo.toml  README.md
migrations/: 1593289739_initial_migration_down.sql  1593289739_initial_migration_up.sql
src/: config.rs  main.rs  message.rs  types.rs
src/dmarc/: types.rs
