[package]
name = "herald"
version = "0.1.0"
authors = ["Alex Studer <alex@studer.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.3"
flate2 = "1.0.19"
imap = { version = "2.1.2", features = ["tls"] }
imap-proto = "0.10.2"
mysql = "20.1.0"
native-tls = "0.2.4"
regex = "1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.59"
serde-xml-rs = "0.4.0"
simple-error = "0.2.2"
toml = "0.5.3"
zip = "0.5"